[gd_scene load_steps=20 format=3 uid="uid://vne21euaplwh"]

[ext_resource type="Texture2D" uid="uid://cfrc3b60isdc3" path="res://Sprites/playbutton_normal.png" id="1_0gwn1"]
[ext_resource type="Texture2D" uid="uid://cf7uesoqe07t1" path="res://Sprites/flame-walkdown.png" id="1_odwj6"]
[ext_resource type="Script" path="res://Scenes/main_menu.gd" id="1_yihuh"]
[ext_resource type="Texture2D" uid="uid://ds3nv2kvl3jrl" path="res://Sprites/playbutton_pressed.png" id="2_ihjdo"]
[ext_resource type="Texture2D" uid="uid://cbqf7yxcy4o2w" path="res://Sprites/playbutton_hover.png" id="3_fo53v"]
[ext_resource type="Texture2D" uid="uid://ct5ushbckdgn1" path="res://Sprites/flame-walkup.png" id="3_s43cj"]
[ext_resource type="Texture2D" uid="uid://jhtkujgauamv" path="res://Sprites/logo.png" id="7_1abpm"]
[ext_resource type="Texture2D" uid="uid://dpxb25t6p5a0u" path="res://Sprites/optionsbutton_normal.png" id="7_y0tyb"]
[ext_resource type="Texture2D" uid="uid://ci32ksrnfxga1" path="res://Sprites/optionsbutton_pressed.png" id="8_f8yp4"]
[ext_resource type="Texture2D" uid="uid://x63g3kr4ufpp" path="res://Sprites/controlsui_v2.png" id="8_qag3r"]
[ext_resource type="Texture2D" uid="uid://dw732ssopochk" path="res://Sprites/optionsbutton_hover.png" id="9_6wjgr"]
[ext_resource type="Texture2D" uid="uid://cm23acklj1k1y" path="res://Sprites/heyimadethis.png" id="12_k081m"]
[ext_resource type="PackedScene" uid="uid://bvf51nkmmq1l" path="res://Scenes/options_ui.tscn" id="13_c0ugv"]

[sub_resource type="Animation" id="Animation_hwvtu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_odwj6")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ckdpk"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_odwj6")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1u2a4"]
_data = {
"RESET": SubResource("Animation_hwvtu"),
"walk": SubResource("Animation_ckdpk")
}

[sub_resource type="Animation" id="Animation_qofuw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasComponent/SpriteComponent2:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_s43cj")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasComponent/SpriteComponent2:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasComponent/SpriteComponent2:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ig1kv"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasComponent/SpriteComponent2:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_s43cj")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasComponent/SpriteComponent2:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasComponent/SpriteComponent2:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_adpy4"]
_data = {
"RESET": SubResource("Animation_qofuw"),
"walk": SubResource("Animation_ig1kv")
}

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_yihuh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../CanvasComponent/SpriteComponent")
libraries = {
"": SubResource("AnimationLibrary_1u2a4")
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_adpy4")
}

[node name="CanvasComponent" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasComponent"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.74902, 0.894118, 0.92549, 1)

[node name="ColorRect2" type="ColorRect" parent="CanvasComponent"]
offset_left = 115.0
offset_top = -18.0
offset_right = 896.0
offset_bottom = 1152.0
color = Color(0, 0, 0, 0.290196)

[node name="PlayButton" type="TextureButton" parent="CanvasComponent"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -785.0
offset_top = 507.0
offset_right = -337.0
offset_bottom = 667.0
grow_horizontal = 2
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("1_0gwn1")
texture_pressed = ExtResource("2_ihjdo")
texture_hover = ExtResource("3_fo53v")

[node name="OptionsButton" type="TextureButton" parent="CanvasComponent"]
offset_left = 134.0
offset_top = 758.0
offset_right = 877.0
offset_bottom = 918.0
texture_normal = ExtResource("7_y0tyb")
texture_pressed = ExtResource("8_f8yp4")
texture_hover = ExtResource("9_6wjgr")

[node name="Logo" type="Sprite2D" parent="CanvasComponent"]
position = Vector2(493, 256)
scale = Vector2(2, 2)
texture = ExtResource("7_1abpm")

[node name="ControlsUI" type="Sprite2D" parent="CanvasComponent"]
position = Vector2(1449, 536.36)
scale = Vector2(1.7, 1.7)
texture = ExtResource("8_qag3r")

[node name="Heyimadethis" type="Sprite2D" parent="CanvasComponent"]
position = Vector2(501, 1035)
scale = Vector2(3, 3)
texture = ExtResource("12_k081m")

[node name="SpriteComponent" type="Sprite2D" parent="CanvasComponent"]
position = Vector2(1525, 142.475)
texture = ExtResource("1_odwj6")
hframes = 8

[node name="SpriteComponent2" type="Sprite2D" parent="CanvasComponent"]
position = Vector2(1716, 142.475)
texture = ExtResource("3_s43cj")
hframes = 8

[node name="OptionsUI" parent="." instance=ExtResource("13_c0ugv")]
visible = false

[connection signal="pressed" from="CanvasComponent/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CanvasComponent/OptionsButton" to="." method="_on_options_button_pressed"]
